add readme and changelog and some improvments
